Groupe 1 /DADdy/.kubernetes/apps/daddy/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: daddy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: daddy-prod-sse-headers@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - app.breezy.ecadiere.fr
        - api.breezy.ecadiere.fr
        - media.breezy.ecadiere.fr
      secretName: daddy-tls
  rules:
    - host: app.breezy.ecadiere.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: breezy-web
                port:
                  number: 80
    - host: api.breezy.ecadiere.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 3001
    - host: media.breezy.ecadiere.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
